--- a/report/files/helpers_js/index.html
+++ b/report/files/helpers_js/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="col-md-6">
       <h2 class="header">Lines of code <i class="icon icon-info-sign" rel="popover" data-placement="top" data-trigger="hover" data-content="Source Lines of Code / Logical Lines of Code" data-original-title="SLOC/LSLOC"></i></h2>
-      <p class="stat">314</p>
+      <p class="stat">316</p>
     </div>
   </div>
   <div class="row historical">
@@ -63,11 +63,11 @@
   <div class="row">
     <div class="col-md-6">
       <h2 class="header">Difficulty  <a href="http://en.wikipedia.org/wiki/Halstead_complexity_measures"><i class="icon icon-info-sign" rel="popover" data-placement="top" data-trigger="hover" data-content="The difficulty measure is related to the difficulty of the program to write or understand." data-original-title="Difficulty"></i></a></h2>
-      <p class="stat">84.80</p>
+      <p class="stat">83.35</p>
     </div>
     <div class="col-md-6">
       <h2 class="header">Estimated Errors  <a href="http://en.wikipedia.org/wiki/Halstead_complexity_measures"><i class="icon icon-info-sign" rel="popover" data-placement="top" data-trigger="hover" data-content="Halstead's delivered bugs is an estimate for the number of errors in the implementation." data-original-title="Delivered Bugs"></i></a></h2>
-      <p class="stat">2.64</p>
+      <p class="stat">2.66</p>
     </div>
   </div>
 </div>
@@ -94,10 +94,12 @@
 
 var toString = Object.prototype.toString
 var hasOwn = Object.prototype.hasOwnProperty
-var isConsole = console &amp;&amp; console.log
+var hasConsole = console &amp;&amp; console.log
 var isBrowser = typeof window !== &#039;undefined&#039;
 
 var _ = exports = module.exports = {}
+
+_.EOL = /\n|\r|\r\n/g
 
 _.isBrowser = isBrowser
 
@@ -363,7 +365,7 @@ _.clean = function clean(obj) {
 }
 
 _.log = function () {
-  if (isConsole) {
+  if (hasConsole) {
     console.log.apply(console, arguments)
   }
 }
