--- a/report/files/memory_js/index.html
+++ b/report/files/memory_js/index.html
@@ -63,7 +63,7 @@
   <div class="row">
     <div class="col-md-6">
       <h2 class="header">Difficulty  <a href="http://en.wikipedia.org/wiki/Halstead_complexity_measures"><i class="icon icon-info-sign" rel="popover" data-placement="top" data-trigger="hover" data-content="The difficulty measure is related to the difficulty of the program to write or understand." data-original-title="Difficulty"></i></a></h2>
-      <p class="stat">40.00</p>
+      <p class="stat">39.11</p>
     </div>
     <div class="col-md-6">
       <h2 class="header">Estimated Errors  <a href="http://en.wikipedia.org/wiki/Halstead_complexity_measures"><i class="icon icon-info-sign" rel="popover" data-placement="top" data-trigger="hover" data-content="Halstead's delivered bugs is an estimate for the number of errors in the implementation." data-original-title="Delivered Bugs"></i></a></h2>
@@ -190,7 +190,7 @@ function findNode(obj, path) {
 }
 
 function hasMetaData(obj) {
-  return _.has(obj, &#039;$$body&#039;) || _.has(obj, &#039;$$name&#039;)
+  return _.has(obj, &#039;$$attributes&#039;) || _.has(obj, &#039;$$name&#039;)
 }</textarea>
   </div>
 </div>
